--- a/index.html
+++ b/index.html
@@ -7,26 +7,48 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>Aula 1</title>
   </head>
-  <body>
+  <body class="fundo">
     <header>
-      <nav>
-        <ul>
-          <li><a href="">Início</a></li>
-          <li><a href="">Sobre</a></li>
-          <li><a href="">Serviços</a></li>
-          <li><a href="">Contatos</a></li>
-        </ul>
-      </nav>
+      <div class="container-custom borda">
+        <div class="logo">
+          <img src="assets/images/logo.jpg" alt="logo" />
+        </div>
+        <nav>
+          <ul class="menu">
+            <li>Início</li>
+            <li>Sobre</li>
+            <li>Serviços</li>
+            <li>Contatos</li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-      <div>
-        <h1>Título 1</h1>
-        <h2>Título 2</h2>
-        <h3>Título 3</h3>
-        <h4>Título 4</h4>
-        <h5>Título 5</h5>
-        <h6>Título 6</h6>
-        <p>Parágrafo com <a href="//google.com.br">link</a></p>
+      <div class="container-custom borda">
+        <div class="linha">
+          <div class="col borda">
+            <h1>Título 1</h1>
+            <h2>Título 2</h2>
+            <h3>Título 3</h3>
+            <h4>Título 4</h4>
+            <h5>Título 5</h5>
+            <h6>Título 6</h6>
+            <p>Parágrafo com <a href="//google.com.br">link</a></p>
+          </div>
+          <div class="col borda">
+            <div class="linha">
+              <div class="col borda">
+                <h2>Coluna da direita</h2>
+              </div>
+              <div class="col borda">
+                <h2>Coluna da direita</h2>
+              </div>
+            </div>
+          </div>
+          <div class="col borda">
+            <h2>Coluna da direita</h2>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
