--- a/index.html
+++ b/index.html
@@ -1,56 +1,95 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
   <head>
+    <title>Título da minha página</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>Aula 1</title>
   </head>
-  <body class="fundo">
-    <header>
-      <div class="container-custom borda">
-        <div class="logo">
-          <img src="assets/images/logo.jpg" alt="logo" />
+
+  <body>
+    <header class="border border-primary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid bg-white">
+          <div class="text-center">
+            <a href="#">
+              <img src="assets/images/logo.png" class="img-fluid w-25" />
+            </a>
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#menu"
+            aria-controls="menu"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="menu">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sobre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Inicial</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Serviços</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contato</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <nav>
-          <ul class="menu">
-            <li>Início</li>
-            <li>Sobre</li>
-            <li>Serviços</li>
-            <li>Contatos</li>
-          </ul>
-        </nav>
-      </div>
+      </nav>
     </header>
     <main>
-      <div class="container-custom borda">
-        <div class="linha">
-          <div class="col borda">
-            <h1>Título 1</h1>
-            <h2>Título 2</h2>
+      <div
+        class="container fundo-madeira text-white bg-white border border-primary"
+      >
+        <div class="row border border-primary">
+          <div class="col">
+            <h1>Titulo 1</h1>
+            <h2>Titulo 2</h2>
             <h3>Título 3</h3>
             <h4>Título 4</h4>
-            <h5>Título 5</h5>
-            <h6>Título 6</h6>
+            <h5>Titúlo 5</h5>
+            <h6>Titúlo 5</h6>
             <p>Parágrafo com <a href="//google.com.br">link</a></p>
           </div>
-          <div class="col borda">
-            <div class="linha">
-              <div class="col borda">
+          <div class="col border border-primary">
+            <div class="row border border-primary">
+              <div class="col border border-primary">
                 <h2>Coluna da direita</h2>
               </div>
-              <div class="col borda">
+              <div class="col border border-primary">
                 <h2>Coluna da direita</h2>
               </div>
             </div>
           </div>
-          <div class="col borda">
+        </div>
+        <div class="row">
+          <div class="col">
             <h2>Coluna da direita</h2>
           </div>
         </div>
       </div>
     </main>
     <footer></footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
